# cpp_modules

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists-ext.txt  CMakeLists.txt  Makefile  README.md  build.ninja  demo.cppm  main.cpp
.github/workflows/: build.yml
src/: demo.cppm  main.cpp
